# tutorhub-enterprise

./: .env.example  .gitignore  AGENTS.md  CheckDB.java  CheckDBSchema.java  CheckUserDB.java  CheckUsers.java  ClientHandler.java  ClientHandler_backup.java  Dockerfile.ai  Dockerfile.core  FixMojibake.java  FixUnicode.java  MediaDeviceSalts  New DOC Document.txt  QuizHub.md  README.md  README_RELEASE.md  RELEASE_NOTES.md  ReplaceSidebar.java  ResetPass.java  ResetPassword.java  SetExamActive.java  Test.java  TestAuthRemote.java  TestDB.java  TestNW.java  TestNW_Direct.java  TestWS.java  TestWSSend.java  ThuMucBiMat.bat  TutorHub.vbs  add_jcodec.py  apply.py  args.txt  attt1.html  bat_log.txt  bottom_bar_snippet.txt  build.bat  build_client_exe.bat  (+131 more)
HF_UPLOAD/: Dockerfile  README.md
banner-web/: index.html  package-lock.json  package.json  vite.config.js
cloudflare/: facebook-oauth-worker.js
docs/: MASTER_SECURE_EXAM_BLUEPRINT_v4_.md  SearchHighlight.java  SearchHighlightProvider.java  SearchSuggestionsPopup.java  TutorHub_VietnamBanner_v2.md  antigravity_home_social_current_state_audit.md  auth_session_architecture_plan.md  auth_success_page_antigravity_style_report.md  codex_auth_production_audit.md  development_workflow.md  facebook-oauth-setup-guide.md  fresh_clone_test.md  google-oauth-netbeans-run-guide.md  google_apps_script_email_relay_setup.md  header_google_like_search_plan.md  header_search_phase1a_2a_implementation_report.md  header_search_phase2b_command_dropdown_report.md  home_banner_and_locket_html_css_js_research_plan.md  home_social_web_panel_data_bridge_report.md  home_social_web_panel_static_polish_report.md  (+153 more)
rust-core/: Cargo.toml  README.md
rust-core/src/: capability_probe.rs  desktop_isolation.rs  ipc_server.rs  main.rs
tutorhub_lockdown/: Cargo.toml
tutorhub_lockdown/src/: config.rs  desktop.rs  error.rs  ipc.rs  keyboard_hook.rs  logger.rs  main.rs  process_scanner.rs  screen_protection.rs  vm_detection.rs  watchdog.rs
(+808 files in other folders)
