[package]
name = "tutorhub_lockdown"
version = "0.1.0"
edition = "2021"
authors = ["TutorHub Dev Team"]

[[bin]]
name = "TutorHub_LockdownCore"
path = "src/main.rs"

[dependencies]
# Windows API binding
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_System_Pipes",
    "Win32_System_StationsAndDesktops",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_Ndis",
] }

# JSON parsing (ExamConfig)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

# SHA-256 cho process hash và TEK
sha2 = "0.10"
hex = "0.4"

# HMAC cho TEK verification
hmac = "0.12"

# Logging
log = { version = "0.4", features = ["std"] }

# Thời gian
chrono = "0.4"

[profile.release]
opt-level = "z"          # Tối ưu size
lto = true
codegen-units = 1
strip = true             # Strip symbols

[profile.dev]
# DEBUG build: giữ symbols, không strip
opt-level = 0
debug = true

[features]
# Feature flag để bật/tắt DEBUG-only code
debug_mode = []          # cargo build --features debug_mode

[target.'cfg(windows)'.dependencies]
# Chỉ compile trên Windows
